# ISSE_Termostato

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  README.md  build_termostato.sh  ejecutar.py  instalar_termostato.sh  pyproject.toml  pytest.ini  setup.py  setup_agentes_actuadores.py  setup_agentes_sensores.py  setup_configurador.py  setup_entidades.py  setup_gestores_entidades.py  setup_registrador.py  setup_servicios_aplicacion.py  setup_servicios_dominio.py  simuladores_config.json  termostato.json
actores_externos/: __init__.py  bateria.py  bateria_cliente.py  cartel_bateria.py  cartel_climatizador.py  cartel_temperatura.py  lanzar_simuladores.sh  selector_temperatura_deseada.py  sensor_temperatura.py  sensor_temperatura_cliente.py  seteo_temperatura_deseada.py  simulador_bateria.py  simulador_selector_temperatura.py  simulador_seteo_temperatura_deseada.py  simulador_temperatura.py  simuladores_config.json
agentes_actuadores/: __init__.py  actuador_climatizador.py  factory_actuador_climatizador.py  visualizador_bateria.py  visualizador_climatizador.py  visualizador_temperatura.py
agentes_sensores/: __init__.py  factory_proxy_bateria.py  factory_selector_temperatura.py  factory_sensor_temperatura.py  proxy_bateria.py  proxy_selector_temperatura.py  proxy_sensor_temperatura.py  proxy_seteo_temperatura.py
configurador/: __init__.py  configurador.py  factory_actuador_climatizador.py  factory_climatizador.py  factory_proxy_bateria.py  factory_selector_temperatura.py  factory_sensor_temperatura.py  factory_seteo_temperatura.py  factory_visualizador_bateria.py  (+3 more)
(+80 files in other folders)
